# OLX_parser

./: .gitignore
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/api/: auth.py  encrypt_utils.py  main.py
backend/celery_worker/: scraper.py  worker.py
backend/db/: crud.py  database.py  models.py  schemas.py
backend/db_migrations/: env.py
backend/db_migrations/versions/: 2023_09_09_1900-fca00d1e7c3c_changed_type_column_for_tags.py  2023_09_09_1943-37b2c3d37f6e_add_index_to_id.py  2023_09_09_1951-49d621d6d35f_add_index_to_id.py
dashboard/: .dockerignore  Dockerfile  dashboard.py  requirements.txt
dashboard/utils/: market_data_preprocessing.py
